# xtsv-word

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: test_xtsv_word.py
xtsv_word/: __init__.py  word.py
