[tool.poetry]
name = "xtsv-word"
version = "1.0.0"
description = "A dataclass-like structure to make the handling of xtsv token attributes comfortable and transparent"
homepage = "https://github.com/ril-lexknowrep/xtsv_word"
authors = ["Pethő Gergely <pagstudium@gmail.com>"]
license = "LGPL 3.0"
readme = "README.md"
packages = [{include = "xtsv_word"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
